# LocalTabula

./: .gitignore  Dockerfile  README.md  README.vi.md  app.py  aux_model.py  benchmark.py  benchmark_nl.py  download_models.py  llm_interface.py  load_model.py  main.ipynb  main.py  model.py  prompts.yaml  pyproject.toml  readme.md  requirements.txt  tabular_chat_local_llm.ipynb  test_main_llm.py  utils.py  utils_v1.py
benchmark/: README.md  benchmark.py  benchmark_nl.py  benchmark_v2.py
benchmark/results/: results.md  summarize_results.py
config/: .env temp  README.md  prompts.yaml
utils/: aux_model.py  download_models.py  llm_interface.py  load_model.py  resources.py  test_cuda.py  utils.py  utils.v1.deprecated.py
